# Ape

./: .gitignore  Ape.cabal
src/Ape/: Check.hs  Env.hs  Eval.hs  Expr.hs  Parse.hs  Print.hs  Type.hs
src/Ape/Analysis/: BindingTime.hs
src/Ape/Transform/: CommonSubExpr.hs  NormalizeBindings.hs  NormalizeExpr.hs  PartialEval.hs  Rename.hs  Specialize.hs  Substitute.hs
src/ApeMachine/: Main.hs
